<resources>
    <string name="app_name">PruebaPractica</string>
    <string name="lblTitle">Solucionador de ecuaciones 2° grado</string>
    <string name="lblSubTitle">Ingrese los siguientes datos</string>
    <string name="lblA">a:</string>
    <string name="lblB">b:</string>
    <string name="lblC">c:</string>
    <string name="btnSolve">Resolver</string>
    <string name="imgViewDescription">Imagen ecuacion cuadratica</string>
    <string name="detalle">Detalle</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre:</string>
    <string name="mes">Mes:</string>
    <string name="ventas">Ventas</string>
    <string name="ventass">Ventas:</string>
    <string name="porcentaje">Porcentaje:</string>
    <string name="comision">Comision</string>
    <string name="salir">Salir</string>
    <string name="codigo">Codigo:</string>
    <string name="total">Total:</string>
    <string name="zero">0.0</string>
    <string name="user"></string>
    <string name="password_hint">********</string>
    <string name="username_hint">usuario</string>
    <string name="btnLogin">Iniciar Sesion</string>
</resources>
