<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    tools:context="sv.com.edu.udb.dsm.activities.ResultActivity">

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="finalizar"
        android:text="@string/salir"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTotal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="152dp"
        android:text="@string/detalle"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="23dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DADADA"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/viewVentas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DADADA"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/viewCodigo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/viewCodigo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DADADA"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/viewVentas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/viewMes"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="17dp"
        android:text="@string/nombre"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewMes"
        app:layout_constraintEnd_toStartOf="@+id/viewNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewTotal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DADADA"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/viewPorcentaje"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DADADA"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/viewVentas"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/viewMes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DADADA"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/viewCodigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="22dp"
        android:text="@string/mes"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewMes"
        app:layout_constraintEnd_toStartOf="@+id/viewMes"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/porcentaje"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewTotal"
        app:layout_constraintEnd_toStartOf="@+id/viewPorcentaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewVentas" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="21dp"
        android:text="@string/ventass"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewVentas"
        app:layout_constraintEnd_toStartOf="@+id/viewVentas"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="21dp"
        android:text="@string/codigo"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewCodigo"
        app:layout_constraintEnd_toStartOf="@+id/viewCodigo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="21dp"
        android:text="@string/total"
        android:textColor="#009688"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewTotal"
        app:layout_constraintEnd_toStartOf="@+id/viewTotal"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="143dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>